#47 toast translation fix

--- a/Source/Portfolio.Web/ClientApp/src/i18n/locales/en.json
+++ b/Source/Portfolio.Web/ClientApp/src/i18n/locales/en.json
@@ -42,7 +42,8 @@
     "messageLabel": "Message",
     "messagePlaceholder": "Your message...",
     "sending": "Sending...",
-    "send": "Send message"
+    "send": "Send message",
+    "successMessage": "Message sent successfully!"
   },
   "themes": {
     "cosmos": "Cosmos",
