--- a/Source/Portfolio.Web/ClientApp/src/i18n/locales/pl.json
+++ b/Source/Portfolio.Web/ClientApp/src/i18n/locales/pl.json
@@ -42,7 +42,8 @@
     "messageLabel": "Wiadomość",
     "messagePlaceholder": "Twoja wiadomość...",
     "sending": "Wysyłanie...",
-    "send": "Wyślij wiadomość"
+    "send": "Wyślij wiadomość",
+    "successMessage": "Wiadomość wysłana pomyślnie!"
   },
   "themes": {
     "cosmos": "Kosmos",
