#50 add shadow to vitrum components

--- a/Source/Portfolio.Web/ClientApp/src/i18n/locales/en.json
+++ b/Source/Portfolio.Web/ClientApp/src/i18n/locales/en.json
@@ -30,7 +30,7 @@
     "description": "Looking for an experienced backend developer? I'd be happy to discuss your project!"
   },
   "footer": {
-    "copyright": "Backend Developer Portfolio. All rights reserved.",
+    "copyright": "RescuePC Software Wiktor Wijata. All rights reserved.",
     "techStack": "Built with React, TypeScript & Tailwind CSS",
     "themeLabel": "Theme:"
   },
