--- a/Source/Portfolio.Web/ClientApp/src/i18n/locales/pl.json
+++ b/Source/Portfolio.Web/ClientApp/src/i18n/locales/pl.json
@@ -30,7 +30,7 @@
     "description": "Szukasz doświadczonego backend developera? Chętnie porozmawiam o Twoim projekcie!"
   },
   "footer": {
-    "copyright": "Backend Developer Portfolio. Wszystkie prawa zastrzeżone.",
+    "copyright": "RescuePC Software Wiktor Wijata. Wszystkie prawa zastrzeżone.",
     "techStack": "Zbudowane z React, TypeScript & Tailwind CSS",
     "themeLabel": "Motyw:"
   },
