--- a/Source/Portfolio.Web/ClientApp/src/i18n/locales/en.json
+++ b/Source/Portfolio.Web/ClientApp/src/i18n/locales/en.json
@@ -14,7 +14,7 @@
     "projects": "Projects",
     "skills": "Skills & Technologies",
     "contact": "Contact",
-    "didYouKnow": "Did you know"
+    "didYouKnow": "Did you know...?"
   },
   "buttons": {
     "showMore": "Show more",
