--- a/Source/Portfolio.Web/ClientApp/src/i18n/locales/pl.json
+++ b/Source/Portfolio.Web/ClientApp/src/i18n/locales/pl.json
@@ -14,7 +14,7 @@
     "projects": "Projekty",
     "skills": "Umiejętności i technologie",
     "contact": "Kontakt",
-    "didYouKnow": "Ciekawostki"
+    "didYouKnow": "Czy wiesz, że...?"
   },
   "buttons": {
     "showMore": "Pokaż więcej",
